--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "5108df33",
    "metadata": {},
    "outputs": [],
@@ -282,6 +282,130 @@
     "c = [a, b]\n",
     "torch.stack(c, dim=1).shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6246aa59",
+   "metadata": {},
+   "source": [
+    "## 测试DPTV2(transformers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0de81e4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zhouy/miniconda3/envs/da2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoImageProcessor, AutoModelForDepthEstimation, DepthAnythingForDepthEstimation\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5e14124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DepthAnythingForDepthEstimation.from_pretrained(\"checkpoints/Depth-Anything-V2-Small-hf\").to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffeac66b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = './demo01.jpg'\n",
+    "image = load_image(image_path, 'cuda')\n",
+    "depth = model(image)\n",
+    "depth.shape\n",
+    "# plot_images([image, depth])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97826e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'model.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "77c4cb6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m model_state_dict \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mDepthAnythingForDepthEstimation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(model_state_dict)\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'config'"
+     ]
+    }
+   ],
+   "source": [
+    "model_state_dict = torch.load('model.pth')\n",
+    "model = DepthAnythingForDepthEstimation()\n",
+    "model.load_state_dict(model_state_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875565d8",
+   "metadata": {},
+   "source": [
+    "## 其他"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "062c170f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "from visualize_utils import *\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "291a707a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "torch.Size([1, 1, 3, 3])\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
